Agentforce/force-app/main/default/objects/Website_Visit__c/Website_Visit__c.object-meta.xml
<CustomObject>
    <label>Website Visit</label>
    <nameField>
        <displayFormat>V-{000}</displayFormat>
        <label>Visit Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Visits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>