Agentforce/force-app/main/default/objects/Website_Visit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Website Visits</relationshipLabel>
    <relationshipName>Website_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>