Agentforce/force-app/main/default/objects/Website_Visit__c/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <label>Business ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>