Agentforce/force-app/main/default/objects/Website_Visit__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>