Agentforce/force-app/main/default/objects/Website_Visit__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label>Employees</label>
    <length>100</length>
    <type>Text</type>
</CustomField>