Agentforce/force-app/main/default/objects/Website_Visit__c/fields/Lead_Forensics_Link__c.field-meta.xml
<CustomField>
    <fullName>Lead_Forensics_Link__c</fullName>
    <label>Lead Forensics Link</label>
    <type>Url</type>
</CustomField>