Agentforce/force-app/main/default/objects/Website_Visit__c/fields/No_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Accounts__c</fullName>
    <label># Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>