Agentforce/force-app/main/default/objects/Website_Visit__c/fields/No_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>No_of_Leads__c</fullName>
    <label># Leads</label>
    <summaryForeignKey>Website_Visit_Lead_Assignment__c.Website_Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>