Agentforce/force-app/main/default/objects/Website_Visit__c/fields/No_of_Pages_Viewed__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pages_Viewed__c</fullName>
    <label># Pages Viewed</label>
    <summaryForeignKey>Website_Page_View__c.Website_Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>