Agentforce/force-app/main/default/objects/Website_Visit__c/fields/Referring_Link__c.field-meta.xml
<CustomField>
    <fullName>Referring_Link__c</fullName>
    <label>Referring Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>