Agentforce/force-app/main/default/objects/Website_Visit__c/fields/Referring_Site__c.field-meta.xml
<CustomField>
    <fullName>Referring_Site__c</fullName>
    <label>Referring Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>