Agentforce/force-app/main/default/objects/Website_Visit__c/fields/Visit_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_ID__c</fullName>
    <externalId>true</externalId>
    <label>Visit ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>