Agentforce/force-app/main/default/objects/Website_Visit__c/fields/Visit_Start__c.field-meta.xml
<CustomField>
    <fullName>Visit_Start__c</fullName>
    <label>Visit Start</label>
    <type>DateTime</type>
</CustomField>