Agentforce/force-app/main/default/objects/Website_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>No_of_Leads__c</columns>
    <columns>Visit_ID__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>