Agentforce/force-app/main/default/objects/Website_Visit__c/listViews/Facilities_UK_Lead_Management_Website_Visit.listView-meta.xml
<ListView>
    <fullName>Facilities_UK_Lead_Management_Website_Visit</fullName>
    <filterScope>Queue</filterScope>
    <label>Facilities - UK - Lead Management</label>
    <queue>Facilities_UK_Lead_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>