Agentforce/force-app/main/default/objects/Website_Visit__c/listViews/Facilities_UKI_Opens_Doors_Website_Visit.listView-meta.xml
<ListView>
    <fullName>Facilities_UKI_Opens_Doors_Website_Visit</fullName>
    <filterScope>Queue</filterScope>
    <label>Facilities - UKI - Opens Doors</label>
    <queue>Facilities_UKI_Opens_Doors</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>