Agentforce/force-app/main/default/objects/Website_Visit__c/listViews/Lead_Forensics_Lead_Review_Website_Visit.listView-meta.xml
<ListView>
    <fullName>Lead_Forensics_Lead_Review_Website_Visit</fullName>
    <filterScope>Queue</filterScope>
    <label>Facilities - UKI - LF - Lead Review</label>
    <queue>Facilities_UKI_LF_Lead_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>