Agentforce/force-app/main/default/objects/Website_Visit__c/listViews/Telemarketing_UK_Website_Visit.listView-meta.xml
<ListView>
    <fullName>Telemarketing_UK_Website_Visit</fullName>
    <filterScope>Queue</filterScope>
    <label>Telemarketing - UK&amp;I</label>
    <queue>Telemarketing_UK_I</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>